kustomize/base/07-ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
  namespace: projet-devops

  labels:
    app: ollama

spec:
  selector:
    app: ollama
  ports:
    - protocol: TCP
      port: 80
      targetPort: 11434
  type: ClusterIP
