kustomize/base/openwebui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui-service
  namespace: projet-devops
  labels:
    app: open-webui

spec:
  selector:
    app: open-webui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
