kustomize/base/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: projet-devops

spec:
  rules:
    - host: projet-devops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-webui-service
                port:
                  number: 80

          - path: /ollama
            pathType: Prefix
            backend:
              service:
                name: ollama-service
                port:
                  number: 80
